# HW-Fast1

./: pyproject.toml
calculator/routes/: __init__.py  calculator.py  defult.py
