[tool.poetry]
name = "calculator"
version = "0.1.0"
description = ""
authors = ["Nazar Bezpalyi <nazar.bez007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
hypercorn = "^0.17.3"
uvicorn = {extras = ["standard"], version = "^0.30.6"}

[tool.poetry.scripts]
start = "calculator:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
